--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -4,6 +4,11 @@
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 2px 5px 0px rgb(220, 220, 220);
+  transition: box-shadow ease 250ms, scale ease 250ms;
+}
+.profile:hover {
+  box-shadow: 0px 2px 15px 0px rgb(200, 200, 200);
+  /* scale: 1.015; */
 }
 .description {
   padding: 50px;
@@ -50,6 +55,12 @@
   flex-basis: calc(100% / 3);
   align-items: center;
   justify-content: center;
+
+  cursor: pointer;
+  transition: background-color ease 250ms;
+}
+.stats > li:hover {
+  background-color: rgba(217, 236, 249, 0.75);
 }
 
 .stats > li:nth-child(2) {
