--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -4,8 +4,12 @@
   align-items: center;
   background-color: #fff;
   border-radius: 5px;
+  box-shadow: 0px 2px 5px 0px rgb(220, 220, 220);
+  transition: box-shadow ease 250ms;
 }
-
+.statistics:hover {
+  box-shadow: 0px 2px 15px 0px rgb(200, 200, 200);
+}
 .title {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: calc(16px + 2vmin);
@@ -27,6 +31,12 @@
   align-items: center;
   gap: 5px;
   padding: 15px;
+  min-width: 75px;
+  cursor: pointer;
+  transition: scale ease 250ms;
+}
+.item:hover {
+  scale: 1.05;
 }
 
 .item:first-child {
