--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(24px + 2vmin);
+  font-weight: 300;
+  color: #444;
+}
+
+h2:nth-child(n + 2) {
+  padding-top: 60px;
+}
