--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,17 @@ h2 {
 h2:nth-child(n + 2) {
   padding-top: 60px;
 }
+
+.App {
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  background-color: #f2f2f2;
+  align-items: center;
+  font-size: 40;
+  color: #010101;
+  min-height: calc(100vh);
+}
