--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -33,6 +33,10 @@
   display: flex;
 }
 
+.transactionHistory tr:nth-child(2n + 1) {
+  background-color: rgba(60, 163, 203, 0.15);
+}
+
 .transactionHistory tr:hover {
   background-color: rgba(60, 163, 203, 0.35);
 }
@@ -51,10 +55,6 @@
 
 .transactionHistory td:hover {
   background-color: rgba(60, 163, 203, 0.35);
-}
-
-.transactionHistory tbody:nth-child(2n + 1) {
-  background-color: rgba(60, 163, 203, 0.15);
 }
 
 .transactionHistory td:nth-child(2) {
